# simplexmq

./: .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  CODE.md  Dockerfile  Dockerfile.build  LICENSE  README.md  build.Dockerfile  cabal.project  docker-compose.yml  download.Dockerfile  flake.nix  hello-format-verification.md  hie.yaml  install.sh  notes-flow.txt  package.yaml  simplexmq-legacy.cabal  simplexmq-v0.cabal  simplexmq.cabal  smp-agent.db  stack.yaml
.claude/: CLAUDE.md  settings.local.json
.github/: CODEOWNERS  changelog_conf.json
.github/ workflows/: ci.yml
.github/workflows/: build.yml  ci.yml  docker-image.yml  reproduce-schedule.yml
apps/client-test/: Main.hs  Util.hs
apps/common/: Embedded.hs
apps/dog-food/: ChatOptions.hs  ChatTerminal.hs  Main.hs  SimplexMarkdown.hs  Styled.hs  Terminal.hs  Types.hs
apps/ntf-server/: Main.hs
apps/server-test/: Main.hs
apps/smp-agent/: Main.hs
apps/smp-server/: Main.hs  SMPWeb.hs  ServerOptions.hs
apps/stress-test/: Main.hs
apps/ws-client/: Main.hs
apps/ws-example/: Main.hs
apps/xftp/: Main.hs
apps/xftp-server/: Main.hs  XFTPWeb.hs
bench/: ClientSim.hs  Dockerfile  Main.hs  Report.hs  docker-compose.yml  init.sql  run.sh
benchmarks/: Bench.hs
benchmarks/Bench/: Base64.hs  BsConcat.hs  Compression.hs  Crypto.hs  SNTRUP761.hs  TRcvQueues.hs
cbits/: README.md  cryptonite_sha512.c  drbg-ctr.c  drbg-ctr.h  getentropy_win.c  openssl_mem_clr.inc  openssl_sha.h  openssl_sha512.c  sha512.c  sha512.h  sntrup761-test.c  sntrup761.c  sntrup761.h  sntrup_random.c  sntrup_sha512.c  sntrup_sha512.h  sxcrandom.c  sxcrandom.h  tweetnacl.c
cbits/sodium/: utils_memory.c
contributing/: CODE.md  PROJECT.md  README.md
deployment/: smp-server-linode.sh
design/: agent-commands.md  agent.gv  agent2.gv  client.gv  delivery.gv  server.gv
docs/: AGENT.md  CLIENT.md  PROTOCOL.md  RESEARCH.md  ROUTERS.md  code-organization.md  logging.md
docs/plans/: memory-analysis-results.md  memory-analysis.md
docs/seasons/: SEASON-01-planning.md  (+3 more)
migrations/: 20210101_initial.sql  20210529_broadcast.sql  20210529_broadcasts.sql  20210602_introductions.sql  20210624_confirmations.sql  20210809_snd_messages.sql  20211113_snd_transmissions.sql  20211202_connection_mode.sql  20211212_rcv_queue_keys.sql  20211215_rcv_dh_secret.sql  20211220_certificate_hash.sql  20211225_e2e_dh_secret.sql  20220101_initial.sql  README.md
plans/: 2026-03-25-xftp-postgres-backend-design.md  2026-03-25-xftp-postgres-implementation-plan.md  2026-05-18-parallel-message-processing.md  2026-06-01-bbs-bindings.md  2026-06-27-service-subscriptions-memory-leak.md  20260328_01_server_batched_sub_processing.md  20260401_01_batch_queue_associations.md  20260522_01_smp_public_namespaces.md  page-rendering-overview.md  slow-queries-analysis-2.md  slow-queries-analysis-3.md  slow-queries-analysis.md  xftp-server-pages-implementation.md
product/: README.md  concepts.md  glossary.md  goals.md  rules.md  threat-model.md
protocol/: agent-protocol.md  overview-tjr.md  overview.md  pqdr.md  push-notifications.md  security.md  simplex-messaging.md  simplex-uri-request.txt  smp-uri-request.txt  xftp-uri-request.txt  xftp.md  xrcp-uri-request.txt  xrcp.md
rfcs/: 2021-01-26-crypto.md  2021-01-26-messages.md  2021-02-26-chat-protocol.md  2021-02-28-streams.md  2021-03-18-groups.md  2021-05-15-groups.md  2021-05-17-open-connection.md  2021-05-23-broadcast.md  2021-05-23-groups2.md  2021-05-23-introduction.md  2021-09-01-smp-message-storage.md  2022-01-05-message-ids.md  2022-01-05-message-ids.sql  2022-03-02-message-log-rotation.md  2022-03-22-nofication-server.md  2022-04-20-smp-conf-timeout-recovery.md  2022-06-11-private-groups.md  2022-06-13-db-sync.md  2022-06-13-db-sync.mmd  2022-08-14-queue-rotation.md  2022-12-26-simplex-file-transfer.md  2022-12-27-queue-quota.md  2023-05-02-resync-ratchets.md  2023-05-03-delivery-receipts.md  2023-05-24-smp-delivery-proxy.md  2023-06-08-resync-ratchets.md  2023-09-12-second-relays.md  2023-09-28-journal-mode-wal.md  2023-10-25-remote-control.md  2023-12-25-proxy-implementation.md  2024-01-17-delivery-workers.md  2024-01-26-file-links.md  2024-02-03-deniability.md  2024-02-12-encryption.md  2024-03-03-pqdr-version.md  2024-03-20-server-metadata.md  2024-03-28-xftp-version.md  2024-06-11-single-subscriber-thread.md  2024-06-13-fast-connection.md  2024-06-14-fast-connection.md  (+28 more)
scripts/: ntf-server-linode.sh  reproduce-builds.sh  simplexmq-reproduce-builds.sh  smp-server-linode.sh  update-smp-server.sh
scripts/resolver/service/: Dockerfile  pyproject.toml  snrc-resolve.py  test_snrc_resolve.py
smp-web/: .gitignore  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
spec/: README.md  TOPICS.md  agent-protocol.md  agent.md  clients.md  compression.md  crypto-ratchet.md  crypto-tls.md  crypto.md  encoding.md  ntf-protocol.md  ntf-server.md  rcv-services.md  remote-control.md  routers.md  security-invariants.md  smp-client.md  smp-protocol.md  smp-server.md  storage-agent.md  storage-server.md  transport-http2.md  transport-websocket.md  transport.md  version.md  xftp-client.md  xftp-protocol.md  xftp-server.md  xrcp-protocol.md
src/: ConnStore.hs  EnvStm.hs  Main.hs  MsgStore.hs  Multiline.hs  QueueStore.hs  Server.hs  Store.hs  Transmission.hs  Transport.hs
tests/: AgentTests.hs  BatchTests.hs  CLITests.hs  FileDescriptionTests.hs  Fixtures.hs  MarkdownTests.hs  NamesResolverServer.hs  NtfClient.hs  NtfProtocolTests.hs  NtfServerTests.hs  NtfWPTests.hs  PostgresSchemaDump.hs  ProtocolErrorTests.hs  ProtocolTests.hs  README.md  RSLVTests.hs  RemoteControl.hs  RemoteControlTests.hs  SMPAgentClient.hs  SMPClient.hs  SMPNamesTests.hs  SMPProxyTests.hs  SMPWebTests.hs  ServerTests.hs  Test.hs  Util.hs  VersionRangeTests.hs  WebTests.hs  XFTPAgent.hs  XFTPCLI.hs  XFTPClient.hs  XFTPServerTests.hs  XFTPWebTests.hs
xftp-web/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json  tsconfig.web.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts  vitest.node.config.ts
(+800 files in other folders)
